@startuml e-commerce

class Product {
    - name: String
    - category: String
    - description: String
    - value: Decimal
    - storage: Integer
    - data_created: DateTime
    - data_updated: DateTime
    + browse_products_by_category(category: String)
    + browse_products_by_value(min_price: float, max_price: float)
    + browse_products_by_name(name: String)
}

class User {
    - username: String
    - first_name: String
    - last_name: String
    - cpf: String
    - email: String
    - password: String
}

class Cart {
    - user: User
    - data_updated: DateTime
    + reduce_quantity()
}

class ItemCart {
    - cart: Cart
    - product: Product
    - quantity: Integer
}

class Address {
    - user: User
    - street: String
    - city: String
    - state: String
    - zip_code: String
    - country: String
    - is_default: Boolean
    + set_as_default()
}

class Order {
    - user: User
    - address: Address
    - total_value: Decimal
    - status: String
}

class OrderItem {
    - order: Order
    - product: Product
    - value: Decimal
    - quantity: Integer
}

User "1" -- "1" Cart : owns
Cart "1" -- "0..*" ItemCart : contains
Product "1" -- "0..*" ItemCart : included_in
User "1" -- "0..*" Address : owns
Address "1" -- "0..*" Order : used_in
Order "1" -- "0..*" OrderItem : contains
Product "1" -- "0..*" OrderItem : included_in

@enduml
